reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_attributes_type_only-2.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super :: into_typescript_code :: < TestStructWithAttributesTypeOnly > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: string,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<string, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

namespace __implementation {

  function inout_test(client: Client) {
    return (input: string, headers: {}, options?: RequestOptions) =>
      __request<string, {}, string, {}>(
        client,
        "/inout_test",
        input,
        headers,
        options,
      );
  }
}
